[package]
name = "alart"
version = "0.1.0"
authors = ["Rafa de Castro <rafael@micubiculo.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
log = "0.4.11"
pretty_env_logger = "0.4.0"

approx = "0.3.2"
image = "0.23.8"

ndarray = "0.13.0"
ndarray-linalg = "0.12"
openblas-src = "0.9"